--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 
     testCompile "org.assertj:assertj-core:3.12.2"
     testCompile "org.junit.jupiter:junit-jupiter-api:5.4.0"
+
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.0-RC1')
 }
 
 compileKotlin {
@@ -21,4 +23,7 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+test {
+    useJUnitPlatform()
 }
