--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,9 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    testCompile "org.assertj:assertj-core:3.12.2"
-    testCompile "org.junit.jupiter:junit-jupiter-api:5.4.0"
+    testImplementation "org.assertj:assertj-core:3.12.2"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.4.0"
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.4.2")
 
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.0-RC1')
 }
